add_executable(
    test_lr35902
    validation.hpp
    LR35902/arguments.cpp
    LR35902/registers.cpp
    LR35902/opcodes.cpp
    LR35902/micro.cpp
    LR35902/micro_ld.cpp
)
target_compile_features(
    test_lr35902
    PRIVATE
    cxx_std_20)
target_compile_options(
    test_lr35902
    PRIVATE
    $<$<CONFIG:DEBUG>:-Wall>
    $<$<CONFIG:DEBUG>:-Wextra>
    $<$<CONFIG:DEBUG>:-Wpedantic>
    -Wno-unknown-pragmas
)
target_link_libraries(
    test_lr35902
    PRIVATE
    LR35902
    gtest_main
    spdlog
)